Bug#42959 - Wrong logic in backup stream library when saving object metadata

Changed specifications of bcat_get_item_create_*() functions so that they
can either report error or signal that there is no data. Updated the logic
in stream_v1.c accordingly.